name:                pong
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pong#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-dir:            assets/
data-files:          Vera.ttf, haskell.png

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Types, Update, Render
  build-depends:       base >= 4.7 && < 5,
                       SFML
  other-modules:       Paths_pong
  default-language:    Haskell2010

executable pong-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pong
  default-language:    Haskell2010

test-suite pong-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pong
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Syynth/pong-hs
